crates/ohno_macros_impl/tests/snapshots/error_attr__tests__a_tuple_struct_gains_a_trailing_core.snap
---
source: crates/ohno_macros/src/error_attr/mod.rs
expression: rendered(parse_quote!(struct T(String);))
---
#[derive(::ohno::Error)]
struct T(
    String,
    /// ohno::generated-core@7f3d9c2a
    ::ohno::OhnoCore,
);
