crates/ohno_macros_impl/tests/snapshots/error_attr__tests__no_constructors_is_rejected.snap
---
source: crates/ohno_macros/src/error_attr/mod.rs
expression: "rendered(parse_quote! { #[no_constructors] struct T { path: String } })"
---
::core::compile_error! {
    "`#[no_constructors]` is not supported under `#[ohno::error]`. A constructor has to initialize the OhnoCore field, and the field inserted by `#[ohno::error]` is an implementation detail with no stable name or position, so it must not be referred to in code. Use `#[derive(ohno::Error)]` and declare the OhnoCore field explicitly"
}
